# TangNano9K

./: .gitignore  README.md
.devcontainer/: devcontainer.json
docs/: gpo.md  peripherals.md  timer.md
hw/constraints/: tangnano9k.cst  tangnano9k.sdc
hw/rtl/: buffer.sv  clock_gen.sv  common_defs.svh  soc.sv  tangnano9k_top.sv
hw/rtl/audio/: i2s_tx.sv  test_tone.sv
hw/rtl/mmio/gpo/: gpo.sv
hw/rtl/mmio/i2c/: i2c.sv  i2c_controller.sv  i2c_master.sv
hw/rtl/mmio/midi/: midi_in.sv  midi_parser.sv  uart_rx.sv
hw/rtl/mmio/sram/: sram.sv  sram_blk.sv
hw/rtl/mmio/timer/: timer.sv
hw/rtl/mmio/trace/: trace.sv  uart_tx.sv
hw/test/buffer/: Makefile  buffer_tb.sv
hw/test/i2s_tx/: i2s_tx_tb.sv
hw/test/midi_parser/: Makefile  midi_parser_tb.sv
hw/test/uart_rx/: Makefile  uart_rx_tb.sv
hw/test/uart_tx/: Makefile
hw/tools/: build.tcl
sw/: CMakeLists.txt  CMakePresets.json
sw/cmake/: rv32imc_gcc.cmake
sw/source/: CMakeLists.txt  Makefile  main.c  runtime.c
sw/source/bsp/: board.c  bsp.h  drv.h  i2c.c  linker.lds  serial.c  serial.h  startup.s  trace.c  trace.h
sw/source/bsp/tangnano9k/: linker.lds
sw/tools/: bin_to_hex.py
